--- a/packages/dnb-eufemia/src/components/global-status/style/themes/dnb-global-status-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/global-status/style/themes/dnb-global-status-theme-ui.scss
@@ -29,6 +29,9 @@
     font-size: 1rem;
   }
   &__message {
+    // to get the red line on the bottom
+    transform: translate3d(0, -1px, 0);
+
     &__content {
       color: var(--color-black-80);
 
